--- a/views/searchForTags.jade
+++ b/views/searchForTags.jade
@@ -32,7 +32,7 @@ block content
                   each result in results
                      tr
                         td #{result.codigo}
-                        td #{result.nota.substring(0,150).replace(/(<([^>]+)>)/ig,' ')} <div><p> ...</p></div><div style='float:left;clear:left;'><em><strong>Tags: </strong></em> #{result.tags} </div>
+                        td #{result.nota.substring(0,150).replace(/(<([^>]+)>)/ig,' ')} <div><p> ...</p></div><div style='float:left;clear:left;'><em><strong>Tags: </strong></em> !{result.tags} </div>
                         td
                         td
    #modalTags.modal
@@ -69,4 +69,13 @@ block script
          var searchTags = $(this).val().replace(/[^a-zA-Z0-9\-]+/g,'');
          $(this).val(searchTags.toUpperCase());
       });
+
+      $(".btn.btn-default.btn-xs").on('click',function(event){
+          $("searchTags").tokenfield();
+          var search = $("#searchTags").val()+","+$(this).attr('id');
+          if (search[0]==',')
+              search = search.substring(1,(search.length));
+          $('#searchTags').tokenfield('setTokens',search);
+      })
+
 
