Mudança do rest de documents para abrir uma imagem na janela corrente.

--- a/views/edit.jade
+++ b/views/edit.jade
@@ -85,7 +85,9 @@ block script
 
       $(document).on('click','a',function(event){
          var value = $(this).attr('value');
-         rest.post('/documents',{codigo: "#{codigo}", value: value});
+         rest.post('/documents',{codigo: "#{codigo}", value: value},function(data){
+            window.location=data;
+         });
       });
 
       $(document).on('ready', function(){
