Novamente, as figuras serão abertas em uma nova janela!!

--- a/views/edit.jade
+++ b/views/edit.jade
@@ -86,7 +86,7 @@ block script
       $(document).on('click','a',function(event){
          var value = $(this).attr('value');
          rest.post('/documents',{codigo: "#{codigo}", value: value},function(data){
-            window.location=data;
+            window.open(data);
          });
       });
 
