--- a/views/edit.jade
+++ b/views/edit.jade
@@ -86,7 +86,7 @@ block script
       $(document).on('click','a',function(event){
          var value = $(this).attr('value');
          rest.post('/documents',{codigo: "#{codigo}", value: value},function(data){
-            window.open(data);
+               window.open(data,'_blank','top=200,left=200,toolbar=no,resizable=yes,scrollbars=no,width=800,height=600');
          });
       });
 
