Primeira versão do Notas-PJE-Admin 	Versão do Notas para o PJE.

--- a/views/edit.jade
+++ b/views/edit.jade
@@ -18,7 +18,7 @@ block content
       div.form-group
          label.control-label.col-sm-2(for="codigo") Código:
          div.col-sm-2
-            input#editCodigo.form-control(type="text" placeholder="Insira um número" readonly name="codigo" value="#{codigo}")
+            input#editCodigo.form-control(type="text" readonly placeholder="Insira um número" name="codigo" value="#{codigo}")
 
       div.form-group
          label.control-label.col-sm-2(for="nota") Nota:
