--- a/views/insert.jade
+++ b/views/insert.jade
@@ -16,25 +16,212 @@ block css
 block content
    form.form-horizontal(role="form" method="post" enctype="multipart/form-data")
       div.form-group
+          label.control-label.col-sm-2(for="tipo nota") Tipo de Nota:
+          div.col-sm-2
+              div.btn-group
+                  a.btn.btn-default.dropdown-toggle.btn-select(data-toggle='dropdown' href='#') Nenhum Tipo&nbsp
+                      span.caret
+                  ul#TipoNota.dropdown-menu
+                      li
+                        a(href="#") Nenhum Tipo
+                      li
+                        a(href="#") Regra de Negócio
+                      li
+                        a(href="#") Implementação
+                      li
+                        a(href="#") Caso de Uso
+                      li
+                        a(href="#") Necessidade Negocial
+
+      div.form-group
          label.control-label.col-sm-2(for="codigo") Código:
          div.col-sm-2
-            input#insertCodigo.form-control(type="text" name="codigo" placeholder="Insira um número")
+            input#insertCodigo.form-control(type="text" name="codigo" placeholder="Insira um código")
+
       div.form-group
          label.control-label.col-sm-2(for="nota") Nota:
          div.col-sm-10
             textarea#insertNota.form-control(rows="20" name="nota" placeholder="Escreva uma nota ou descrição aqui!!")
+
       div.form-group
          label.control-label.col-sm-2(for="arquivo") Arquivo:
          div.col-sm-4
             div.input-group
                input#insertArquivos.form-control(type="file" name="file" placeholder="Insira um arquivo aqui!!" multiple)
+
+      div.form-group
+          label.control-label.col-sm-2(for="Issue") Número da Issue:
+          div.col-sm-4
+              div.input-group
+                  input#insertIssue.form-control(type="text" name="issue" required placeholder="Insira o número de uma Issue!!")
+
+      div.form-group
+          label.control-label.col-sm-2(for="Perfil") Perfil:
+          div.col-sm-4
+              div.btn-group
+                  a.btn.btn-default.dropdown-toggle.btn-select(data-toggle='dropdown' href='#') Nenhum Tipo&nbsp
+                      span.caret
+                  ul#Perfil.dropdown-menu(required)
+                      li
+                        a(href="#") Nenhum Tipo
+                      li
+                        a(href="#") Jus Postulandi
+                      li
+                        a(href="#") Advogado
+                      li
+                        a(href="#") Procurador
+                      li
+                        a(href="#") Diretor de Secretaria
+                      li
+                        a(href="#") Magistrado
+                      li
+                        a(href="#") Administrador
+                      li
+                        a(href="#") Administrador Arquivo
+                      li
+                        a(href="#") Administrador Audiência
+                      li
+                        a(href="#") Administrador Conhecimento
+                      li
+                        a(href="#") Administrador Contadoria
+                      li
+                        a(href="#") Administrador do Protocolo
+                      li
+                        a(href="#") Administrador Execução
+                      li
+                        a(href="#") Administrador Malote
+                      li
+                        a(href="#") Administrador Perícia
+                      li
+                        a(href="#") Administrador (principal)
+                      li
+                        a(href="#") Administrador Triagem
+                      li
+                        a(href="#") Assessor
+                      li
+                        a(href="#") Assessor-chefe
+                      li
+                        a(href="#") Assistente de advogado
+                      li
+                        a(href="#") Assistente de procuradoria
+                      li
+                        a(href="#") Assistente gestor de advogado
+                      li
+                        a(href="#") Assistente gestor de procuradoria
+                      li
+                        a(href="#") Conciliador
+                      li
+                        a(href="#") Consulta
+                      li
+                        a(href="#") Editor da ajuda
+                      li
+                        a(href="#") Estagiário Arquivo
+                      li
+                        a(href="#") Estagiário Audiência
+                      li
+                        a(href="#") Estagiário Conhecimento
+                      li
+                        a(href="#") Estagiário Contadoria
+                      li
+                        a(href="#") Estagiário de Pericia
+                      li
+                        a(href="#") Estagiário Execução
+                      li
+                        a(href="#") Estagiário Malote
+                      li
+                        a(href="#") Estagiário Triagem
+                      li
+                        a(href="#") Oficial de Justiça
+                      li
+                        a(href="#") Oficial de Justiça Distribuidor
+                      li
+                        a(href="#") Perito
+                      li
+                        a(href="#") Procurador/Gestor
+                      li
+                        a(href="#") Procurador MP
+                      li
+                        a(href="#") Procurador MP/Gestor
+                      li
+                        a(href="#") Secretário da Sessão
+                      li
+                        a(href="#") Secretário de Audiência
+                      li
+                        a(href="#") Servidor Arquivo
+                      li
+                        a(href="#") Servidor Audiência
+                      li
+                        a(href="#") Servidor Conhecimento
+                      li
+                        a(href="#") Servidor Contadoria
+                      li
+                        a(href="#") Servidor do protocolo
+                      li
+                        a(href="#") Servidor do protocolo da seção
+                      li
+                        a(href="#") Servidor Execução
+                      li
+                        a(href="#") Servidor Geral
+                      li
+                        a(href="#") Servidor Malote
+                      li
+                        a(href="#") Servidor Perícia
+                      li
+                        a(href="#") Servidor Prazo
+                      li
+                        a(href="#") Servidor Retificador
+                      li
+                        a(href="#") Servidor Triagem
+                      li
+                        a(href="#") Usuário Push
+                      li
+                        a(href="#") Usuário sem login no sistema
+                      li
+                        a(href="#") Outro (especificar com uma Tag)
+
+      div.form-group
+          label.control-label.col-sm-2(for="Funcionalidade") Funcionalidade:
+          div.col-sm-4
+              div.btn-group
+                  a.btn.btn-default.dropdown-toggle.btn-select(data-toggle='dropdown' href='#') Nenhum Tipo&nbsp
+                      span.caret
+                  ul#Funcionalidade.dropdown-menu(required)
+                      li
+                        a(href="#") Nenhum Tipo
+                      li
+                        a(href="#") Painel
+                      li
+                        a(href="#") Tarefa
+                      li
+                        a(href="#") Processo
+                      li
+                        a(href="#") Atividades
+                      li
+                        a(href="#") Audiências e sessões
+                      li
+                        a(href="#") Configuração
+                      li
+                        a(href="#") Gestão
+                      li
+                        a(href="#") Login
+                      li
+                        a(href="#") Acesso ao Push
+                      li
+                        a(href="#") Consulta ao andamento processual
+                      li
+                        a(href="#") Interoperabilidade
+                      li
+                        a(href="#") Teste automatizado
+
       div.form-group
          label.control-label.col-sm-2(for="tags") Tags:
          div.col-sm-10
             input#insertTags.form-control(type="text" name="tags" placeholder="Insira tags aqui!!")
+
       div.form-group
          div.col-sm-offset-2.col-sm-10
             button.btn.btn-default(type="submit") Salvar
+
       #modalInsert.modal
          .modal-dialog
             .modal-content
@@ -54,14 +241,51 @@ block script
    script(src='/stylesheets/editors5/dist/bootstrap3-wysihtml5.js')
    script(src='/javascripts/componentsInit/textAreaEditor.js')
    script.
-      $("#insertTags").on('tokenfield:createtoken', function(event){
+      $('#insertTags').on('tokenfield:createtoken', function(event){
           var existingTokens = $(this).tokenfield('getTokens');
           $.each(existingTokens, function(index, token){
                 if (token.value === event.attrs.value) {
+                    alert("Chegou aqui!!");
                     event.preventDefault();
                 }
           });
       });
 
+      $("#TipoNota.dropdown-menu li a").click(function(){
+          var selText = $(this).text();
+          $(this).parents('.btn-group').find('.dropdown-toggle').html(selText+' <span class="caret"> </span>');
+          if (selText == 'Regra de Negócio') {
+              $('#insertCodigo').val('RN-');
+          } else
+          if (selText == 'Implementação') {
+              $('#insertCodigo').val('IMP-');
+          } else
+          if (selText == 'Caso de Uso') {
+              $('#insertCodigo').val('UC-');
+          } else
+          if (selText == 'Necessidade Negocial') {
+              $('#insertCodigo').val('NEC-');
+          } else {
+              $('#insertCodigo').val('');
+          }
+          $('#insertTags').tokenfield('createToken', selText);
+      });
 
+      $('#insertIssue').on('blur',function(){
+            var numero = $(this).val();
+            if (numero !='')
+              $('#insertTags').tokenfield('createToken', 'Issue: '+numero);
+      })
+
+      $('#Perfil.dropdown-menu li a').click(function(){
+          var selText = $(this).text();
+          $(this).parents('.btn-group').find('.dropdown-toggle').html(selText+' <span class="caret"> </span>');
+          $('#insertTags').tokenfield('createToken', 'Perfil: '+selText);
+      });
+
+      $('#Funcionalidade.dropdown-menu li a').click(function(){
+          var selText = $(this).text();
+          $(this).parents('.btn-group').find('.dropdown-toggle').html(selText+' <span class="caret"> </span>');
+          $('#insertTags').tokenfield('createToken', 'Funcionalidade: '+selText);
+      });
 
