--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html
       nav.navbar.navbar-default
          div.container-fluid
             div.navbar-header
-               a.navbar-brand(href="/index") Notas
+               a.navbar-brand(href="/index") Notas-PJE-Admin
             div
                ul.nav.navbar-nav
                   li: a(href="/insert") Inserir
