--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,11 +14,28 @@ html
                a.navbar-brand(href="/index") Notas-PJE-Admin
             div
                ul.nav.navbar-nav
-                  li: a(href="/insert") Inserir
-                  li: a(href="/searchForCodigo" ) Pesquisa por Código
-                  li: a(href="/searchForTags" ) Pesquisa por Tag
-                  li: a(href="/searchForNota") Pesquisa por Nota
-                  li: a(href="/help") Ajuda
+                  li
+                    a(href="/insert") Inserir
+                  li
+                    a(href="/searchForTags") Pesquisa por Tag
+                  li.dropdown
+                    a.dropdown-toggle(data-toggle="dropdown" role="button" href="#") Cadastros&nbsp
+                      span.caret
+                      ul.dropdown-menu
+                          li
+                            a(href="/perfil") Perfil
+                          li
+                            a(href="/funcionalidade") Funcionalidades
+                  li.dropdown
+                    a.dropdown-toggle(data-toggle="dropdown" role="button" href="#") Pesquisas&nbsp
+                      span.caret
+                      ul.dropdown-menu
+                          li
+                            a(href="/searchForCodigo" ) Pesquisa por Código
+                          li
+                            a(href="/searchForNota") Pesquisa por Nota
+                  li
+                    a(href="/help") Ajuda
       block content
     script(src='/stylesheets/jquery/jquery-2.1.3.min.js')
     script(src='/stylesheets/jquery-ui/jquery-ui.js')
