Adicão de filtro no input file para inserir pdfs, imagens, sons, vídeos e alguns tipos de planilhas.

--- a/views/edit.jade
+++ b/views/edit.jade
@@ -38,7 +38,7 @@ block content
       div.form-group
          label.control-label.col-sm-2(for='arquivos') Arquivo(s):
          div.col-sm-4
-            input#editArquivos.form-control(type="file" name="file" placeholder="Insira um arquivo aqui!!" multiple)
+            input#editArquivos.form-control(type="file" name="file" accept="image/*,audio/*,video/*,.pdf,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" placeholder="Insira um arquivo aqui!!" multiple)
 
       div.form-group
          label.control-label.col-sm-2(for="tags") Tags:
