--- a/views/insert.jade
+++ b/views/insert.jade
@@ -47,7 +47,7 @@ block content
          label.control-label.col-sm-2(for="arquivo") Arquivo:
          div.col-sm-4
             div.input-group
-               input#insertArquivos.form-control(type="file" name="file" placeholder="Insira um arquivo aqui!!" multiple)
+               input#insertArquivos.form-control(type="file" name="file" accept="image/*,audio/*,video/*,.pdf,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" placeholder="Insira um arquivo aqui!!" multiple)
 
       div.form-group
           label.control-label.col-sm-2(for="Issue") Número da Issue:
